--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,13 @@
             android:exported="false">
         </activity>
 
+        <activity
+            android:name=".CreditcardActivity"
+            android:exported="false">
+        </activity>
+
+
+
     </application>
 
 </manifest>
