--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.app2"> <!-- Ensure your package name is here -->
+    package="com.example.app2">
 
-    <!-- Declare required permissions -->
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,12 +17,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App2"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
 
         <!-- Main Activity (entry point of your app) -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -32,39 +34,46 @@
         <!-- Login Activity -->
         <activity
             android:name=".LoginActivity"
-            android:exported="false">
+            android:exported="false"
+            >
         </activity>
 
         <!-- Signup Activity -->
         <activity
             android:name=".SignupActivity"
-            android:exported="false">
+          >
         </activity>
         <activity
             android:name=".ForgotActivity"
-            android:exported="false">
+            android:exported="false"
+           >
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:exported="false">
+            android:exported="false"
+           >
         </activity>
         <activity
             android:name=".VerifyCodeActivity"
-            android:exported="false">
+            android:exported="false"
+           >
         </activity>
         <activity
             android:name=".ResetPasswordActivity"
-            android:exported="false">
+            android:exported="false"
+          >
         </activity>
 
         <activity
-            android:name=".CreditCardDataActivity"
-            android:exported="false">
+            android:name="creditcard.CreditCardDataActivity"
+            android:exported="false"
+           >
         </activity>
 
         <activity
-            android:name=".CreditCardActivity"
+            android:name="creditcard.CreditCardActivity"
             android:exported="false">
+
         </activity>
 
 
