Added memberships and added backpress block on some papges

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,16 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name="MembershipManager"
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name="MembershipActivity"
+            android:exported="false">
+
+        </activity>
 
 
     </application>
