--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ materialVersion = "1.9.0"
 recyclerview = "1.3.2"
 retrofit = "2.9.0"
 sqlite = "2.4.0"
+coordinatorlayout = "1.2.0"
 
 [libraries]
 android-activation = { module = "com.sun.mail:android-activation", version.ref = "androidMail" }
@@ -37,6 +38,7 @@ cronet-embedded = { module = "com.google.android.gms:play-services-cronet", vers
 gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
 material-v190 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+androidx-coordinatorlayout = { group = "androidx.coordinatorlayout", name = "coordinatorlayout", version.ref = "coordinatorlayout" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 
