added Securenotes and changed the font

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -96,6 +96,16 @@
             android:exported="false"
             >
         </activity>
+        <activity
+            android:name="SecureNotes.SecureNotesActivity"
+            android:exported="false"
+            >
+        </activity>
+        <activity
+            android:name="SecureNotes.SecureNotesDataActivity"
+            android:exported="false"
+            >
+        </activity>
     </application>
 
 </manifest>
