--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -104,6 +105,15 @@
         <activity
             android:name="SecureNotes.SecureNotesDataActivity"
             android:exported="false"
+            >
+        </activity>
+        <activity
+            android:name="personal_id.PersonalIdActivity"
+            android:exported="false"
+            >
+        </activity>
+        <activity
+            android:name="personal_id.PersonalIdDataActivity"
             >
         </activity>
     </application>
