--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,6 +126,11 @@
             android:exported="false"
             >
         </activity>
+        <activity
+            android:name=".TwoFactorAuthActivity"
+            android:exported="false"
+            >
+        </activity>
     </application>
 
 </manifest>
